# FastGEMM-fp32

./: CMakeLists.txt  Makefile  README.md
src/: cublas.cu  cuda_check.cuh  run.cu  util.cu
src/kernels/: optimized.cu
